stylesheets/styles.css
/* ... */
#resume p {
    opacity: 0;
    position: relative;
    top: 50px;
    transition: 0.2s all ease 0s;
}

#resume:hover {
    height: 55px;
    width: 55px;
    background-size: 55px 55px;
}

#resume:hover > p {
    opacity: 1;
    top: 55px;
}

header, #contact-me, #skills, #portfolio, #others, .about-me {
    box-shadow: 0px 20px 20px rgba(0,0,0,0.2);
    position: relative;
}

/*
nav {
    position: absolute;
    top: 40%;
    left: 20px;
    z-index: 999;
}

nav ul{
    padding: 0;
    list-style: none;
}

span p {
    color: #AFB2B1;
    text-shadow: 1px 1px 1px rgba(0,0,0,0.8);
    width: 100px;
    position: absolute;
    top: 10px;
    left: 26px;
    opacity: 0;
    transition: 0.3s;
    display:none;
    
}

span:hover > p {
    opacity: 1;
    margin-left: 50px;
    display:inline;
}


nav span#top {
    top: 35%;
}

nav span#about {
    top: 40%;
}

nav span#projects {
    top: 45%
}

nav span#contact {
    top: 50%;
}

nav span#resume {
    top: 60%;
}

nav span {
    position: fixed;
    width: 40px;
    height: 40px;
    border-radius: 100%;
    background-color: transparent;
    transition: 0.3s;
    left: 40px;
    -ms-transform: rotate(180deg); 
    -webkit-transform: rotate(180deg);  
    transform: rotate(180deg);
}

nav span:before, nav span:after {
    content: '';
    position: absolute;
    width: 0px;
    height: 0px;
    border: 20px solid transparent;
    transition: 0.3s;
}

nav span:after {
    margin-top: 20px;
    border-top-color: #22272D;
}

nav span:before {
    border-bottom-color: #292F36;
    margin-top: -20px;
}

nav span:hover {
    -ms-transform: rotate(360deg); 
    -webkit-transform: rotate(360deg);  
    transform: rotate(360deg);
}

a#active > span:before {
    border-bottom-color: #FF7878;
    
}

a#active > span:after {
    border-top-color: #FF6B6B;
}

a#active > span > p {
    color: #FF6B6B;
}

span#resume:before {
    border-bottom-color: #24394F;
}

span#resume:after {
    border-top-color: #1D2E3F;
}

span#resume > p {
    color: #1D2E3F;
}

button.navbar-toggle {
    padding: 8px 9px
}

span.icon-bar {
    width: 16px!important;
}

button.collapsed.navbar-toggle:hover > span {
    background-color: #E1ECEC;
}

button.collapsed.navbar-toggle {
    border: 1px solid #24323C;
    background-color: white;
}

button.collapsed.navbar-toggle > span {
    background-color: #24323C;
}

button.collapsed.navbar-toggle:hover {
    background-color: #24323C;
}

button.navbar-toggle {
    background-color: #24323C;
}

button.navbar-toggle > span {
    background-color: #E1ECEC;
}

button.navbar-toggle:hover {
    background-color: white;
    border: 1px solid #24323C;

}

button.navbar-toggle:hover > span {
    background-color: #24323C;
}
*/

header {
    max-height: 900px;
	height: 98vh;
    padding-top: 175px;
    background-repeat: no-repeat;
    background-position: bottom left;
    z-index: 10;
}

#header-corner, #header-corner-2 {
    width: 500px;
    height: 400px;
    height: auto;
}

#header-corner {
    position: absolute;
    transform: rotate(180deg);
    top: 0px;
    right: 0px;
}

#header-corner-2 {
    position: absolute;
    left: 0px;
    bottom: 0px;
    z-index: -20;
}

#header-wrapper {
    transition: all 0.5s ease 0s;
    transform: rotate(-90deg);
}

.rotateSquare {
    transform: rotate(0deg) !important;
}

#top-square, #bot-square {
    width: 0;
    height: 0;
    margin: 0 auto;
    border-left: solid transparent;
    border-right: solid transparent;
    position: relative;
}

#top-square {
    border-bottom: solid #292F36;
    top: 72px;
}

#bot-square {
    border-top: solid #292F36;
    top: -72px;
}

#top-square, #bot-square {
    border-width: 175px;
    z-index: 0;
}

#title, #description, #divider {
    opacity: 0;
    text-align: center;
    text-shadow: 1px 1px 3px rgba(41,47,54, 0.5);
}

#divider {
    width: 0;
    border-color: #292F36;
    box-shadow: 1px 1px 3px rgba(41,47,54, 0.5);
}

@media (max-width: 991px) {
    #top-square, #bot-square {
        border-width: 125px;
    }
}

@media (max-width: 767px) {
    #header-corner {
        top: -150px;
    }
    
    #header-corner-2 {
        bottom: -150px;
    }
}

@media (max-width: 481px) {
    #header-corner {
        top: -200px;
    }
    
    #header-corner-2 {
        bottom: -200px;    
    }
    
    #top-square, #bot-square {
        border-width: 75px;
    }
    
    #top-square {
        top: 67px;
    }
    
    #bot-square {
        top: -67px;
    }
    
    header h1 {
        font-size: 30px;
    }
    
    header h2 {
        font-size: 26px;
    }
    
}

@media (max-width: 278px) {
    header h1 {
        font-size: 26px;
    }
}

#section-wrapper, #portfolio, #contact-me {
    background-color: #F1F6F4;
}

.about-me {
    z-index: 9;
    background: url(../media/portrait-xl.png);
    background-size: 60% auto;
    background-repeat: no-repeat;
    background-position: left bottom;
    font-size: 1.2em;
}

@media (max-width: 1199px) {
    .about-me {
        background: url(../media/portrait-lg.png);
        background-repeat: no-repeat;
        background-position: left bottom;   
    }
}

@media (max-width: 991px) {
    .about-me .col-md-6 {
        width: 45%;
    }
    
    .about-me {
        background-size: 80% auto;
    }

}

@media (max-width: 767px) {
    .about-me {
        background-image: none;
    }
    .about-me .col-md-6 {
        width: 100%;
    }
    
    .about-me img {
        margin-top: 1em;
        max-width: 340px;
    }
    
    .about-me .visible-xs {
        text-align:center;
    }
    
}

#skills, #others {
    position: relative;
    background-color: white;
}

#skills {
    z-index: 8;
}

.skill-l, .skill-m, .skill-s {
    text-align: center;
    color: #E3EDE9;
    border: 5px solid white;
    border-top: none;
    border-left: none;
}

.skill-l {
    height: 100px;
    padding-top: 38px;
    font-size: 17px;
    background-color: #3C4148;
}
/* ... */

